fix(docs-infra): apply `text-top` instead of `top` for table alignment (#47457)
use `text-top` instead of `top` for table cells verical alignment
so that the texts are correctly vertially aligned regardless on
the dom structure

resolves #47423

PR Close #47457

--- a/aio/src/styles/2-modules/table/_table.scss
+++ b/aio/src/styles/2-modules/table/_table.scss
@@ -37,7 +37,7 @@ table {
       padding: 16px;
       text-align: left;
       @include mixins.line-height(24);
-      vertical-align: top;
+      vertical-align: baseline;
 
       @media (max-width: 480px) {
         &:before {
